<resources>
    <string name="app_name">StoryAppSubmission</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_story">Judul Story</string>
    <string name="description">Deskripsi Story</string>
    <string name="picture_of_story">gambar dari story</string>
    <string name="create_account">Buat akun? Daftar</string>
    <string name="min_password">Password minimal 8 karakter</string>
    <string name="logo_dicoding">Logo Dicoding</string>
    <string name="invalid_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="invalid_email">Format email tidak valid</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="have_account">Sudah punya akun? Masuk</string>
    <string name="empty_name">Nama tidak boleh kosong</string>
    <string name="put_name">Masukan Nama</string>
    <string name="put_email">Masukan Email</string>
    <string name="put_password">Masukan Password</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="name_must_be_at_least_3_characters">Name must be at least 3 characters</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_must_not_be_less_than_8_characters">Password must not be less than 8 characters</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="no_media_selected">No media selected</string>
    <string name="photo_picker">Photo Picker</string>
    <string name="isi_deskripsi">Isi Deskripsi</string>
    <string name="camera_capture_failed">Camera capture failed</string>
    <string name="token_not_found">Token not found</string>
    <string name="image_and_description_cannot_be_empty">Image and description cannot be empty</string>
    <string name="image_uri_is_null">Image URI is null</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="image_tidak_boleh_kosong">Image tidak boleh kosong</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal">Normal</string>
    <string name="satelit">Satelit</string>
    <string name="hybrid">Hybrid</string>
    <string name="failed_to_load_stories">Failed to load stories</string>
    <string name="ini_adalah_deksripsi_gambar">Ini adalah deksripsi gambar</string>
    <string name="upload_story">Upload Story</string>
    <string name="error">Error</string>
    <string name="detail_story">Detail Story</string>
    <string name="retry">Coba lagi</string>
</resources>